--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dubovek</title>
     <link rel="stylesheet" href="./css/main.css">
+    <style></style>
 </head>
 <body>
-    <h1>Zuikio ukis</h1>
+    <h1 class="random-color">Zuikio ukis</h1>
+    <div class="clock">0s</div>
 
     <h2 id="darzoves" class="section-title section-title section-title section-title">Darzoves</h2>
     <ul>
@@ -44,7 +46,13 @@
     <h2 id="technika" class="section-title section-italic">Technika</h2>
     <ul></ul>
 
+    <h2 id="knygos" class="section-title section-italic">Knygos</h2>
+    <ul>
+    </ul>
+
     <script src="./js/main.js" defer></script>
-    
+    <script src="./js/clock.js" defer></script>
+    <script src="./js/arrow.js" defer></script>
 </body>
+
 </html>
